SUBDIRS = src
AUTOMAKE_OPTIONS=gnu
TESTS= ./tests/compat/backgroundcolor.ie8.test1.sh \
./tests/compat/backgroundcolor.ie8.test2.sh \
./tests/compat/backgroundcolor.ie9.test1.sh \
./tests/compat/backgroundcolor.ie9.test2.sh \
./tests/compat/backgroundimage.ie8.test1.sh \
./tests/compat/backgroundoffset.ie8.test1.sh \
./tests/compat/backgroundoffset.ie9.test1.sh \
./tests/compat/cursor.chrome.test2.sh \
./tests/compat/cursor.ie10.test2.sh \
./tests/compat/cursor.ie11.test2.sh \
./tests/compat/cursor.ie8.test1.sh \
./tests/compat/cursor.ie8.test2.sh \
./tests/compat/cursor.ie9.test1.sh \
./tests/compat/cursor.ie9.test2.sh \
./tests/compat/ie9hack.ie9.test2.sh \
./tests/compat/ie9hack.none.test2.sh \
./tests/compat/inlineblock.ie7.test1.sh \
./tests/compat/inlineblock.ie8.test1.sh \
./tests/compat/progressive.all.test1.sh \
./tests/compat/progressive.all.test2.sh \
./tests/compat/progressive.none.test2.sh \
./tests/compat/rejoin.all.test1.sh \
./tests/compat/rejoin.all.test2.sh \
./tests/compat/rejoin.all.test3.sh \
./tests/css/compress.attrib.colon.test1.sh \
./tests/css/compress.attrib.colon.test2.sh \
./tests/css/compress.attrib.string.test1.sh \
./tests/css/compress.attrib.string.test2.sh \
./tests/css/compress.colormark.test1.sh \
./tests/css/compress.dont.background.test1.sh \
./tests/css/compress.dont.background.test2.sh \
./tests/css/compress.dont.test1.sh \
./tests/css/compress.initial.background.test1.sh \
./tests/css/compress.initial.font.test1.sh \
./tests/css/compress.mess.test1.sh \
./tests/css/compress.mess.test2.sh \
./tests/css/compress.mess.test3.sh \
./tests/css/compress.restructure.background.test3.sh \
./tests/css/compress.restructure.empty.atrule.test1.sh \
./tests/css/compress.restructure.empty.atrule.test2.sh \
./tests/css/compress.restructure.equal.selectors.test1.sh \
./tests/css/compress.restructure.equal.selectors.test2.sh \
./tests/css/compress.restructure.equal.selectors.test3.sh \
./tests/css/compress.restructure.equal.test1.sh \
./tests/css/compress.restructure.equal.test2.sh \
./tests/css/compress.restructure.equal.test3.sh \
./tests/css/compress.restructure.equal.test4.sh \
./tests/css/compress.restructure.equal.test5.sh \
./tests/css/compress.restructure.equal.test6.sh \
./tests/css/compress.restructure.equal.test7.sh \
./tests/css/compress.restructure.filter.test1.sh \
./tests/css/compress.restructure.margin.test1.sh \
./tests/css/compress.restructure.margin.test2.sh \
./tests/css/compress.restructure.margin.test3.sh \
./tests/css/compress.restructure.merge.test1.sh \
./tests/css/compress.restructure.merge.test2.sh \
./tests/css/compress.restructure.merge.test3.sh \
./tests/css/compress.restructure.merge.test4.sh \
./tests/css/compress.restructure.padding.test1.sh \
./tests/css/compress.restructure.padding.test2.sh \
./tests/css/compress.sh3.selectors.deep.sh \
./tests/css/compress.shorthand.margin.padding.test1.sh \
./tests/css/compress.shorthand.margin.test1.sh \
./tests/css/compress.shorthand.margin.test2.sh \
./tests/css/compress.shorthand.margin.test3.sh \
./tests/css/compress.shorthand.margin.test4.sh \
./tests/css/compress.shorthand.margin.test5.sh \
./tests/css/compress.shorthand.margin.test6.sh \
./tests/css/compress.shorthand.margin.test7.sh \
./tests/css/compress.shorthand.margin.unary.test1.sh \
./tests/css/compress.shorthand.margin.unary.test2.sh \
./tests/css/compress.shorthand.margin.unary.test3.sh \
./tests/css/compress.shorthand.margin.unary.test4.sh \
./tests/css/compress.shorthand.margin.unary.test5.sh \
./tests/css/compress.shorthand.margin.unary.test6.sh \
./tests/css/compress.shorthand.margin.unary.test7.sh \
./tests/css/compress.shorthand.padding.test1.sh \
./tests/css/compress.shorthand.padding.test2.sh \
./tests/css/compress.shorthand.padding.test3.sh \
./tests/css/compress.shorthand.padding.test4.sh \
./tests/css/compress.shorthand.padding.test5.sh \
./tests/css/compress.shorthand.padding.test6.sh \
./tests/css/compress.shorthand.padding.test7.sh \
./tests/css/empty.sh \
./tests/css/issue100.test1.sh \
./tests/css/issue111.test1.sh \
./tests/css/issue138.test1.sh \
./tests/css/issue138.test2.sh \
./tests/css/issue153.test1.sh \
./tests/css/issue159.test1.sh \
./tests/css/issue159.test2.sh \
./tests/css/issue159.test3.sh \
./tests/css/issue159.test4.sh \
./tests/css/issue16.test1.sh \
./tests/css/issue165.test1.sh \
./tests/css/issue170.test1.sh \
./tests/css/issue215.test1.sh \
./tests/css/issue226.test1.sh \
./tests/css/issue39.test1.sh \
./tests/css/issue39.test10.sh \
./tests/css/issue39.test11.sh \
./tests/css/issue39.test12.sh \
./tests/css/issue39.test13.sh \
./tests/css/issue39.test14.sh \
./tests/css/issue39.test15.sh \
./tests/css/issue39.test16.sh \
./tests/css/issue39.test17.sh \
./tests/css/issue39.test18.sh \
./tests/css/issue39.test19.sh \
./tests/css/issue39.test2.sh \
./tests/css/issue39.test20.sh \
./tests/css/issue39.test21.sh \
./tests/css/issue39.test22.sh \
./tests/css/issue39.test23.sh \
./tests/css/issue39.test24.sh \
./tests/css/issue39.test25.sh \
./tests/css/issue39.test26.sh \
./tests/css/issue39.test27.sh \
./tests/css/issue39.test28.sh \
./tests/css/issue39.test29.sh \
./tests/css/issue39.test3.sh \
./tests/css/issue39.test30.sh \
./tests/css/issue39.test31.sh \
./tests/css/issue39.test4.sh \
./tests/css/issue39.test5.sh \
./tests/css/issue39.test6.sh \
./tests/css/issue39.test7.sh \
./tests/css/issue39.test8.sh \
./tests/css/issue39.test9.sh \
./tests/css/issue45.test1.sh \
./tests/css/issue48.test1.sh \
./tests/css/issue50.test1.sh \
./tests/css/issue50.test2.sh \
./tests/css/issue52.test1.sh \
./tests/css/issue52.test2.sh \
./tests/css/issue53.test1.sh \
./tests/css/issue53.test2.sh \
./tests/css/issue54.test1.sh \
./tests/css/issue57.test1.sh \
./tests/css/issue71.test1.sh \
./tests/css/issue76.test1.sh \
./tests/css/issue76.test2.sh \
./tests/css/issue76.test3.sh \
./tests/css/issue76.test4.sh \
./tests/css/issue76.test5.sh \
./tests/css/issue78.test1.sh \
./tests/css/issue78.test2.sh \
./tests/css/issue78.test3.sh \
./tests/css/issue78.test4.sh \
./tests/css/issue79.test1.sh \
./tests/css/issue79.test2.sh \
./tests/css/issue81.test1.sh \
./tests/css/issue81.test2.sh \
./tests/css/issue82.test1.sh \
./tests/css/issue86.test1.sh \
./tests/css/issue87.test1.sh \
./tests/css/issue88.test1.sh \
./tests/css/issue90.test1.sh \
./tests/css/issue90.test2.sh \
./tests/css/stylesheet.0.sh \
./tests/css/stylesheet.1.sh \
./tests/css/stylesheet.2.sh \
./tests/css/stylesheet.3.sh \
./tests/css/stylesheet.4.sh \
./tests/css/stylesheet.c.0.sh \
./tests/css/stylesheet.s.0.sh \
./tests/css/stylesheet.s.1.sh \
./tests/css/stylesheet.s.2.sh \
./tests/css/stylesheet.s.3.sh
